--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <script src="./calculator.js"></script>
+    <script src="./scripts/btnFunctions.js" defer></script>
+    <script src="./scripts/calculator.js" defer></script>
 
     <title>Calculator</title>
 </head>
