Base Version for new layout
DONE:
-Main Event Listener set up(Not completed)
-Number Buttons Completed
TODO:
-Command Buttons
-Operator Buttons
-Main sequence of calculation
-Javascript rounding error
-BODMAS CALCULATION

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <!--ROW1-->
             <button type="button" class="item itemCommand">+/-</button>
-            <button type="button" class="item itemCommand">Clear</button>
+            <button type="button" class="item itemCommand">clear</button>
             <button type="button" class="item itemCommand">del</button>
             <button type="button" class="item itemOperator">%</button>
             
