Command operation functions complete

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <form class="calculatorContainer">
             <!--DISPLAY-->
             <fieldset class="item" id="display">
-                <output id="input"></output>
-                <input id="output"></input>
+                <output id="displayInput"></output>
+                <input id="displayOutput"></input>
             </fieldset>
 
             <!--ROW1-->
