--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <script src="./scripts/basicFunctions.js" defer></script>
     <script src="./scripts/btnFunctions.js" defer></script>
     <script src="./scripts/calculator.js" defer></script>
 
@@ -23,7 +24,7 @@
             <button type="button" class="item itemCommand">+/-</button>
             <button type="button" class="item itemCommand">clear</button>
             <button type="button" class="item itemCommand">del</button>
-            <button type="button" class="item itemOperator">%</button>
+            <button type="button" class="item itemOperator" disabled>%</button>
             
             <!--ROW2-->
             <button type="button" class="item itemNumber">7</button>
