Completed keyboard input
Adding event listener was far more cumbersome than simply making the input element type="number" and hiding the arrows with css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!--DISPLAY-->
             <fieldset class="item" id="display">
                 <output id="displayInput"></output>
-                <input id="displayOutput"></input>
+                <input type="number" id="displayOutput"></input>
             </fieldset>
 
             <!--ROW1-->
